Acrescentado transacao de tela

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,4 +48,10 @@
         android:layout_weight="1"
         android:text="@string/app_btnEntrar" />
 
+    <TextView
+        android:id="@+id/lblTeste"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
 </LinearLayout>
